# WebDevelopment_Ryan

./: .gitignore  README.md
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: auth.rs  form_handler.rs  main.rs  middleware.rs  models.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/forms/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Navbar.tsx
